template index.html; github isn't displaying most recent commit guh

--- a/web/index.html
+++ b/web/index.html
@@ -1,18 +1,79 @@
-<!doctype html>
-<html>
 
-<head>
-<meta charset="utf-8">
-<script type="text/javascript" src="brython.js"></script>
-<script type="text/javascript" src="brython_stdlib.js"></script>
-</head>
+<!DOCTYPE html><html><head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>STOP REVERSE ENGINEERING</title>
+    <style type="text/css">
+        body{
+            margin:40px auto;
+            max-width:650px;
+            line-height:1.6;
+            font-size:18px;
+            color:#444;
+            padding:010px;
+            background-color:#D2E0FB;
+        }
+        h1,h2,h3{line-height:1.2}
+        div.scrollmenu {
+            overflow: auto;
+            white-space: nowrap;
+            display: flex;
+            align-items: center;
+        }
+        div.scrollmenu figure {
+            display: inline-block;
+            text-align: center;
+            text-decoration: none;
+        }
+    </style>
+</head><body>
+    <header><h1>STOP DOING <code>Reverse engineering</code> </h1>
+    <aside><strong>API</strong>S WERE NOT MEANT TO BE UNDERSTOOD</aside>
+    </header>
+<ul>
+    <li>YEARS OF REVERSE ENGINEERING yet NO REAL-WORLD USE FOR understanding compiled CODE</li>
+    <li>sure we are not relaying information that could be used against us</li>
+    <li>security through obscurity</li>
+    <li>cease and desist</li>
+    <li>Title 49 Code of Federal Regulations parts § 1540.103(c) states: No person may make, or cause to be made any reproduction or alteration, for fraudulent purpose, of any report, record, security program, access medium, or identification medium issued under this subchapter. </li>
+    <li>Computers were supposed to solve meath, not to be programmed</li>
+    <li>C is a letter, not a language</li>
+    <li>wanna print() something? Write in a paper with a pen 📁3️⃣3️⃣</li> 
+    <li>"I'n writing a recursive method with threads to optimize the cpu usage in a 0.02%" this is a nonsensical statement made by deranged people</li>
+    <li style="text-shadow: 0 0 5px #00ff00, 0 0 10px #00ff00, 0 0 15px #00ff00;">glowing text</li>
+</ul>
+<p>look at what FMA has been demanding your respect for, after all the wall dividers</p>
+<p><strong>(this is real computer science done by real computer scientists):</strong></p>
+<div class="scrollmenu">
+    <figure>
+        <img src="images/computercraft.jpg.png" alt="images/computercraft.jpg.png">
+        <figcaption style="color: red;">images/computercraft.jpg.png</figcaption>
+    </figure>
+    <figure>
+        <img src="images/horses_lisp.jpg.png" alt="images/horses_lisp.jpg.png">
+        <figcaption style="color: red;">images/horses_lisp.jpg.png</figcaption>
+    </figure>
+    <figure>
+        <img src="images/whiteboard_interviews.jpg.png" alt="images/whiteboard_interviews.jpg.png">
+        <figcaption style="color: red;">images/whiteboard_interviews.jpg.png</figcaption>
+    </figure>
+</div>
+<p><strong>IF REVERSE ENGINEERING WAS REAL HOW COME NOBODY THOUGHT OF PUBLISHING SOURCE CODE</strong></p>
+<p><strong>THEY'VE PLAYED US FOR ABSOLUTE FOOLS</strong></p>
 
-<body onload="brython(1)">
-<script type="text/python">
-from browser import document
 
-document <= "Hello"
-</script>
-</body>
+<!--
+<p><strong>strong</strong> makes bold</p>
+<p><em>em makes</em> italic</p>
+<p><h3>h3</h3> is decent Size</p>
+<p><h2>h2</h2> is for title across the line</p>
+<p><code>code</code> for disjointed text</p>
 
-</html>
+    <hr>
+
+    <blockquote>
+        "You're a fucking moron if you use default browser styles."<br>
+        - Eleanor Roosevelt
+    </blockquote>
+-->
+</body></html>
