re-attempting to push changes to github again

--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,7 @@
             max-width:650px;
             line-height:1.6;
             font-size:18px;
-            color:#444;
+            color:#444; 
             padding:010px;
             background-color:#D2E0FB;
         }
@@ -42,7 +42,7 @@
     <li>"I'n writing a recursive method with threads to optimize the cpu usage in a 0.02%" this is a nonsensical statement made by deranged people</li>
     <li style="text-shadow: 0 0 5px #00ff00, 0 0 10px #00ff00, 0 0 15px #00ff00;">glowing text</li>
 </ul>
-<p>look at what FMA has been demanding your respect for, after all the wall dividers</p>
+<p>look at what FMA has been demanding your respect for, after we put all the walls around their section</p>
 <p><strong>(this is real computer science done by real computer scientists):</strong></p>
 <div class="scrollmenu">
     <figure>
