starting to shift to using brython to generate index.html

--- a/web/index.html
+++ b/web/index.html
@@ -26,7 +26,8 @@
             text-decoration: none;
         }
     </style>
-</head><body>
+    <script src="https://cdn.jsdelivr.net/npm/brython@3.12.1/brython.min.js"></script>
+</head><body onload="brython()"></body>
     <header><h1>STOP DOING <code>Reverse engineering</code> </h1>
     <aside><strong>API</strong>S WERE NOT MEANT TO BE UNDERSTOOD</aside>
     </header>
@@ -45,6 +46,7 @@
 <p>look at what FMA has been demanding your respect for, after we put all the walls around their section</p>
 <p><strong>(this is real computer science done by real computer scientists):</strong></p>
 <div class="scrollmenu">
+    <script type="text/python" src="brython/getFigures.py"></script>
     <figure>
         <img src="images/computercraft.jpg.png" alt="images/computercraft.jpg.png">
         <figcaption style="color: red;">images/computercraft.jpg.png</figcaption>
