--- a/web/template.html
+++ b/web/template.html
@@ -1,7 +1,5 @@
 <html>
-    <head>
-        <meta charset="utf-8">
-        <script src="/brython.js"></script>
-    </head>
-    <body onload="brython()">{content}</body>
-</html>
+<head><meta charset="utf-8"><script src="/brython.js"></script></head>
+<body onload="brython()"><script type="text/python">
+{content}
+</script></body></html>
