pushing changes from Sunday

--- a/web/template.html
+++ b/web/template.html
@@ -1,5 +1,3 @@
 <html>
 <head><meta charset="utf-8"><script src="/brython.js"></script></head>
-<body onload="brython()">
-{body}
-</body></html>
+<body onload="brython()">{body}</body></html>
