--- a/web/template.html
+++ b/web/template.html
@@ -1,3 +1,6 @@
 <html>
-<head><meta charset="utf-8"><script src="/brython.js"></script></head>
+<head><meta charset="utf-8">
+    <script src="/brython.js"></script>
+    <script src="/brython_stdlib.js"></script>
+</head>
 <body onload="brython()">{body}</body></html>
