A 2040 doesn't have storage enough for brython.js, so neeed to use cdn's

--- a/web/template.html
+++ b/web/template.html
@@ -1,6 +1,6 @@
 <html>
-<head><meta charset="utf-8">
-    <script src="/brython.js"></script>
-    <script src="/brython_stdlib.js"></script>
+<head>
+    <meta charset="utf-8">
+    <script src="https://cdn.jsdelivr.net/npm/brython@3/brython_stdlib.js"></script>
 </head>
 <body onload="brython()">{body}</body></html>
